first version of mock segment and mock source